argocd/utility/kubernetes-dashboard/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: kubernetes-dashboard-kong-proxy
        port: kong-proxy
      middlewares:
      - name: kube-system-private-ips-allow@kubernetescrd
  tls:
    secretName: kubernetes-dashboard-certificate
